# WiseLearningCompanion

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  Cargo.toml
backend/src/: main.rs
lesson/: lesson1.md  lesson1.yaml  lesson2.md  lesson2.yaml  lesson3.md  lesson3.yaml
src/: App.tsx
src/components/custom/: chatinput.tsx  header.tsx  language-toggle.tsx
src/components/lessons/: LessonBrowser.tsx  LessonCard.tsx  LessonChat.tsx  LessonContent.tsx  LessonSearch.tsx  LessonTabs.tsx  PinyinText.tsx  SplitLayout.tsx  WordPopup.tsx
src/context/: LanguageContext.tsx  LessonContext.tsx
src/hooks/: useLessonSearch.ts  useLessons.ts  useWordDefinition.ts
src/pages/chat/: chat.tsx
src/pages/lessons/: ChineseLessons.tsx  LessonViewer.tsx
src/styles/: lessons.css
src/types/: lesson.ts
src/utils/: lessonUtils.ts  pinyinUtils.ts
