[package]
name = "wise-learning-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["ws"]}
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rig-core = "0.20"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
